# tintage-python

./: LICENSE  MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.py
tintage/: __init__.py
