[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tintage"
version = "0.0.1"
authors = [{name = "Tintage Inc", email = "contact@tintage.com"}]
description = "Image and video rendering platform SDK."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["tintage", "image", "video", "generation", "rendering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://tintage.com"
Repository = "https://github.com/TintageHQ/tintage-python"
